update manuscript prosocial religin

--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
@@ -688,143 +688,170 @@ Note that our approach does not focus on testing specific hypotheses; instead, w
 
 ### Sample
 
-Data were collected by the New Zealand Attitudes and Values Study (NZAVS), an annual longitudinal national probability panel study of social attitudes, personality, ideology, and health outcomes in New Zealand. Chris G. Sibley started the New Zealand Attitudes and Values Study in 2009, which has grown to include a community of over fifty researchers. Since its inception, the New Zealand Attitudes and Values Study has accumulated questionnaire responses from `r n_total` New Zealand residents. The study operates independently of political or corporate funding and is based in a university setting. Data summaries for our study sample on all measures used in this study are found in **Appendices B-D**. For more details about the New Zealand Attitudes and Values Study see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB).
+We collected data from the New Zealand Attitudes and Values Study (NZAVS), an annual longitudinal national probability panel assessing social attitudes, personality, ideology, and health outcomes among New Zealand residents. The panel started in 2009, the NZAVS has expanded to include over fifty researchers and has gathered responses from `r n_total` participants to date. The study operates independently of political or corporate funding and is based in a university setting. Data summaries for all measures used in this study are provided in **Appendices B-D**. For more information about the NZAVS, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB)
 
 ### Treatment Indicator
 
-Religious service attendance is assessed in the New Zealand Attitudes and Values Study with the following questions:
 
-- *Do you identify with a religion and/or spiritual group? If yes...How many times did you attend a church or place of worship during the last month?*
+We assessed religious service attendance using the question:
 
-We rounded responses to the nearest whole number. Because there were few responses greater than eight, we coded all above eight as eight (see *Appendix B*: we label this variable `religion_church_round`). Note that contrasts with responses greater than four were not intervened upon in the regular church service condition; we decided to ease the computational burden during estimation.
+	-	*Do you identify with a religion and/or spiritual group? If yes, how many times did you attend a church or place of worship during the last month?*
+
+Responses were rounded to the nearest whole number. Because few participants reported attending more than eight times, we capped responses above eight at eight (see Appendix B, variable `religion_church_round`). In the regular church service condition, we did not intervene on responses greater than four to reduce computational burden during estimation.
 
 ### Measures of Prosociality
 
-**Study 1: Self-reported charity** 
+We assessed prosocial behaviour using the following measures:
 
-The New Zealand Attitudes and Values Study includes two self-reported measures of prosociality:
 
-- Volunteering:
-  *"Please estimate how many hours you spent doing each of the following things last week...Volunteer/charitable work."*
-  
-- Annual charitable financial donations:
-  *"How much money have you donated to charity in the last year?"*
+**Study 1: Self-Reported Charity** 
+
+Participants reported:
+
+	•	Volunteering: *"Please estimate how many hours you spent doing each of the following things last week…Volunteer/charitable work."*
+	•	Annual Charitable Financial Donations: *"How much money have you donated to charity in the last year?"*
 
 **Study 2: Help received from others in the last week: *time* **
 
-Participants were asked:
-
-*"Please estimate how much help you have received from the following sources in the last week."*
+Participants estimated the amount of help they received in the past week in hours from:
 
 - *Family...TIME (hours)*
 - *Friends...TIME (hours)*
 - *Community...TIME (hours)*
 
-Owing to the high variability of responses, we transformed responses into binary indicators: *0 = none/1 = any*.
+Due to high variability, we transformed responses into binary indicators: 0 = none; 1 = any.
 
 **Study 3: Help received from others in the last week: *money* **
 
 Similarly, participants were asked:
 
-*"Please estimate how much help you have received from the following sources in the last week."*
+Participants estimated the monetary help they received in the past week from:
 
 - *Family...MONEY (dollars)*
 - *Friends...MONEY (dollars)*
 - *Community...MONEY (dollars)*
 
-These measures were also highly variable. Hence, we converted responses to binary indicators: *0 = none/1 = any*.
+Again, due to high variability, responses were converted to binary indicators: 0 = none; 1 = any.
 
-Studies 2 and 3 aim to minimise self-presentation bias by using revealed measures of prosocial exposure. Our approach assumes that if religious institutions foster prosociality, the initiation of regular attendance—controlling for past religious service, past measures of the prosocial outcomes, and a rich array of demographic, personality, and health measures recorded at baseline—will increase exposure to prosocial behaviours. Notably, our revealed measures of prosociality rely on stated help received and are robust to self-presentation biases that might associate religious service attendance with indicators of prosociality in the absence of causation. Such an association could occur if initiation into treatment affected the subsequent error term of one or more of the outcomes we contrast. Note that we include baseline outcomes and treatments in all studies, which mitigates the threat of undirected correlated errors.
+Studies 2 and 3 employed revealed measures of prosocial exposure to minimise self-presentation bias. We assumed that if religious institutions foster prosociality, initiation into regular attendance—controlling for past attendance, baseline prosocial measures, and a range of demographic, personality, and health factors—would increase exposure to prosocial behaviours. By focusing on help received, these measures are less susceptible to self-presentation biases that could otherwise confound associations between religious attendance and prosocial indicators. Including baseline outcomes and treatments in our analyses mitigates the threat of undirected correlated errors.
 
-We provide comprehensive details of all measures in **Appendix A**.
+Comprehensive details of all measures are provided in **Appendix A**.
 
 ### Causal Interventions
 
-We define three targeted causal contrasts (*causal estimands*) as interventions on prespecified modified treatment policies (refer to @haneuse2013estimation; @diaz2021nonparametric; @diaz2023lmtp). There are three measurement intervals $k = \{0,1,2\}$. Baseline indicators of the treatment obtained from $k = 0$ are included for confounding control. $A_1$ denotes the natural level of the treatment, measured at $k = 1$—monthly frequency of religious service. Outcome indicators are obtained from $k = 2$—the end of the study. $\mathbf{\tilde{g}}(A_i)$ denotes a modified treatment policy, where $A^+_1\mathbf{\tilde{g}}(A_i = a_1)$ is the level to which $A_i$ is set according to a policy function $\mathbf{\tilde{g}}$. Under modified treatment policies, the natural value of the treatment may be a confounder. However, because we estimate the causal effects of point interventions, there is no additional threat of confounding for modified treatment policies in this study.
 
-1. **Regular Religious Service Treatment**: Administer regular religious service attendance to everyone in the adult population. If an individual's religious service attendance is below four times per month, shift to four; otherwise, maintain their current attendance:
+We defined three targeted causal contrasts based on prespecified modified treatment policies:
 
-$$
-\mathbf{g}^\lambda (A_i) = \begin{cases} 
-4 & \text{if } A_i < 4 \\ 
-A_i & \text{otherwise} 
-\end{cases}
-$$
+	1.	Regular Religious Service Treatment: Simulating a scenario where everyone attends religious services regularly. For individuals attending less than four times per month, their attendance was shifted to four; those already attending four or more times per month remained unchanged.
+	2.	Zero Religious Service Treatment: Simulating a scenario where no one attends religious services. For individuals attending more than zero times per month, their attendance was shifted to zero; those already not attending remained unchanged.
+	3.	Status Quo—No Treatment: Using each individual’s observed level of religious service attendance without any modification.
+	
 
-2. **Zero Religious Service Treatment**: Ensure no religious service attendance for everyone in the adult population of New Zealand. If an individual's religious service attendance is greater than zero, shift to zero; otherwise, make no change:
+<!-- We define three targeted causal contrasts (*causal estimands*) as interventions on prespecified modified treatment policies (refer to @haneuse2013estimation; @diaz2021nonparametric; @diaz2023lmtp). There are three measurement intervals $k = \{0,1,2\}$. Baseline indicators of the treatment obtained from $k = 0$ are included for confounding control. $A_1$ denotes the natural level of the treatment, measured at $k = 1$—monthly frequency of religious service. Outcome indicators are obtained from $k = 2$—the end of the study. $\mathbf{\tilde{g}}(A_i)$ denotes a modified treatment policy, where $A^+_1\mathbf{\tilde{g}}(A_i = a_1)$ is the level to which $A_i$ is set according to a policy function $\mathbf{\tilde{g}}$. Under modified treatment policies, the natural value of the treatment may be a confounder. However, because we estimate the causal effects of point interventions, there is no additional threat of confounding for modified treatment policies in this study. -->
 
-$$
-\mathbf{g}^\phi (A_i) = \begin{cases} 
-0 & \text{if } A_i > 0 \\ 
-A_i & \text{otherwise} 
-\end{cases}
-$$
+<!-- 1. **Regular Religious Service Treatment**: Administer regular religious service attendance to everyone in the adult population. If an individual's religious service attendance is below four times per month, shift to four; otherwise, maintain their current attendance: -->
 
-3. **Status Quo—No Treatment**: Apply no treatment. Each expected mean outcome is calculated using each individual's natural (observed) value of religious service attendance:
+<!-- $$ -->
+<!-- \mathbf{g}^\lambda (A_i) = \begin{cases}  -->
+<!-- 4 & \text{if } A_i < 4 \\  -->
+<!-- A_i & \text{otherwise}  -->
+<!-- \end{cases} -->
+<!-- $$ -->
 
-$$
-\mathbf{g}(A_i) = A_i
-$$
+<!-- 2. **Zero Religious Service Treatment**: Ensure no religious service attendance for everyone in the adult population of New Zealand. If an individual's religious service attendance is greater than zero, shift to zero; otherwise, make no change: -->
+
+<!-- $$ -->
+<!-- \mathbf{g}^\phi (A_i) = \begin{cases}  -->
+<!-- 0 & \text{if } A_i > 0 \\  -->
+<!-- A_i & \text{otherwise}  -->
+<!-- \end{cases} -->
+<!-- $$ -->
+
+<!-- 3. **Status Quo—No Treatment**: Apply no treatment. Each expected mean outcome is calculated using each individual's natural (observed) value of religious service attendance: -->
+
+<!-- $$ -->
+<!-- \mathbf{g}(A_i) = A_i -->
+<!-- $$ -->
 
 ### Causal Contrasts
 
-From these policies, we compute the following causal contrasts.
 
-**Target Contrast A: 'Regular vs. Zero'**: How do the prosocial effects of a society with regular religious service attendance differ from those of a society with zero religious service attendance?
+Based on these policies, we computed three causal contrasts:
 
-$$ 
-\text{Regular Religious Service vs. Zero Religious Service} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g}^\phi)] 
-$$
+	1.	Regular vs. Zero Attendance: Comparing average prosocial outcomes in a society where everyone attends religious services regularly to one where no one attends. This simulates a hypothetical experiment where individuals are randomised to either regular attendance or no attendance, allowing us to assess differences in prosociality one year after the intervention.
+	2.	Regular Attendance vs. Status Quo: Comparing a society where everyone attends religious services regularly to the current state. This contrast examines the potential effect of transitioning non-regular attendees to regular attendance.
+	3.	Zero Attendance vs. Status Quo: Comparing a society where no one attends religious services to the current state. This contrast examines the potential impact of eliminating religious service attendance entirely.
+	
 
-This contrast simulates a scientifically interesting hypothetical experiment where we could randomise individuals to either regular religious service or none, assessing the differences in prosociality outcomes measured one year after the intervention.
+<!-- **Target Contrast A: 'Regular vs. Zero'**: How do the prosocial effects of a society with regular religious service attendance differ from those of a society with zero religious service attendance? -->
 
-**Target Contrast B: 'Regular vs. Status Quo'**: How does a society with regular religious service attendance compare to its status quo?
+<!-- $$  -->
+<!-- \text{Regular Religious Service vs. Zero Religious Service} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g}^\phi)]  -->
+<!-- $$ -->
 
-$$ 
-\text{Regular Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g})] 
-$$
+<!-- This contrast simulates a scientifically interesting hypothetical experiment where we could randomise individuals to either regular religious service or none, assessing the differences in prosociality outcomes measured one year after the intervention. -->
 
-This contrast reflects a policy-relevant hypothetical experiment examining the effect of transitioning to regular religious service if one does not already regularly attend, allowing us to quantitatively assess how much a society in which everyone attends would differ from a society in its current state.
+<!-- **Target Contrast B: 'Regular vs. Status Quo'**: How does a society with regular religious service attendance compare to its status quo? -->
 
-**Target Contrast C: 'Zero vs. Status Quo'**: What are the social consequences for society of zero religious service attendance compared to its status quo?
+<!-- $$  -->
+<!-- \text{Regular Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\lambda) - Y(\mathbf{g})]  -->
+<!-- $$ -->
 
-$$ 
-\text{Zero Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\phi) - Y(\mathbf{g})] 
-$$
+<!-- This contrast reflects a policy-relevant hypothetical experiment examining the effect of transitioning to regular religious service if one does not already regularly attend, allowing us to quantitatively assess how much a society in which everyone attends would differ from a society in its current state. -->
 
-This contrast investigates the policy implications of eliminating religious services entirely, questioning whether such a shift would meaningfully affect average levels of charitable donations and volunteering.
+<!-- **Target Contrast C: 'Zero vs. Status Quo'**: What are the social consequences for society of zero religious service attendance compared to its status quo? -->
+
+<!-- $$  -->
+<!-- \text{Zero Religious Service vs. No Treatment} = E[Y(\mathbf{g}^\phi) - Y(\mathbf{g})]  -->
+<!-- $$ -->
+
+<!-- This contrast investigates the policy implications of eliminating religious services entirely, questioning whether such a shift would meaningfully affect average levels of charitable donations and volunteering. -->
 
 ### Identification Assumptions
 
-To consistently estimate a causal effect, investigators must satisfy three assumptions:
+To consistently estimate a causal effect, investigators must satisfy three assumptions (refer to @bulbulia2023):
 
-1. **Causal consistency:** Potential outcomes must correspond with observed outcomes under the treatments in the data. We assume potential outcomes do not depend on how the treatment was administered, conditional on measured covariates [@vanderweele2009; @vanderweele2013].
 
-2. **Conditional exchangeability:** Given observed covariates, we assume treatment assignment is independent of the potential outcomes to be contrasted. In other words, there is "no unmeasured confounding" [@hernan2024WHATIF; @chatton2020].
+	1.	Causal Consistency: Potential outcomes correspond to the observed outcomes under the treatments in our data. We assume that, conditional on measured covariates, potential outcomes do not depend on how the treatment was administered [@vanderweele2009; @vanderweele2013].
+	2.	Conditional Exchangeability: Given observed covariates, treatment assignment is independent of the potential outcomes being compared (no unmeasured confounding) [@hernan2024WHATIF; @chatton2020].
+	3.	Positivity: Every individual has a non-zero probability of receiving each treatment level, regardless of their covariate values. We evaluated this by examining changes in religious service attendance from baseline to the treatment wave [@westreich2010].
 
-3. **Positivity:** Every individual must have a non-zero chance of receiving the treatment, regardless of their covariate values [@westreich2010]. We evaluate this assumption in each study by examining changes in religious service attendance from baseline (NZAVS time 10) to the treatment wave (NZAVS time 11). For further discussion of these assumptions in the context of NZAVS studies, see [@bulbulia2023a].
 
 ### Target Population
 
-The target population for this study comprises New Zealand residents as represented in the baseline wave of the New Zealand Attitudes and Values Study (NZAVS) during the years 2018-2019, weighted by New Zealand Census weights for age, gender, and ethnicity (refer to @sibley2021). The NZAVS is a national probability study designed to reflect the broader New Zealand population accurately. Despite its comprehensive scope, the NZAVS has some limitations in its demographic representation. Notably, it tends to under-sample males and individuals of Asian descent while over-sampling females and Māori (the indigenous peoples of New Zealand). To address these disparities and enhance the accuracy of our findings, we apply New Zealand Census survey weights to the sample data. These weights adjust for variations in age, gender, and ethnicity to better approximate the national demographic composition [@sibley2021]. Survey weights were integrated into statistical models using the `weights` option in `lmtp` [@williams2021], following protocols stated in [@bulbulia2024PRACTICAL].
+Our target population comprises New Zealand residents represented in the baseline wave of the NZAVS during 2018–2019, weighted by New Zealand Census data for age, gender, and ethnicity [@sibley2021]. While the NZAVS is a national probability study designed to reflect the broader New Zealand population, it tends to under-sample males and individuals of Asian descent, and over-sample females and Māori (the indigenous people of New Zealand). To address these disparities and enhance the accuracy of our findings, we applied survey weights adjusting for age, gender, and ethnicity. Survey weights were integrated into our statistical models using the weights option in `lmtp` [@williams2021], following established protocols [@bulbulia2024PRACTICAL].
 
 ### Eligibility Criteria
 
-To be included in the analysis of this study, participants needed to meet the following eligibility criteria:
+Participants were included in the analysis if they:
 
-#### Inclusion Criteria
+	•	Were enrolled in the 2018 wave of the NZAVS (Time 10).
+	•	Provided responses to the religious service attendance question at both Time 10 (baseline) and Time 11 (treatment wave).
 
-- Enrolled in the 2018 wave of the New Zealand Attitudes and Values Study (NZAVS time 10).
-- Missing covariate data at baseline was permitted, and the data was subjected to imputation methods to reduce bias. Only information obtained at baseline was used for such imputation (refer to [@zhang2023shouldMultipleImputation]).
-Participants may have been lost to follow-up at the end of the study (NZAVS time 12) if they met eligibility criteria at NZAVS time 11 (the treatment wave). We adjusted for attrition and non-response using censoring weights, described below.
-
-#### Exclusion Criteria
-
-- Did not answer the religious service attendance question at New Zealand Attitudes and Values Study at time 10 (the baseline wave) and NZAVS time 11 (the treatment wave).
+Participants with missing covariate data at baseline were included, with missing data imputed using information available at baseline. Participants may have been lost to follow-up by the end of the study (Time 12); we adjusted for attrition and non-response using censoring weights, as described below.
 
 A total of `r n_participants` individuals met these criteria and were included in the study.
 
-### Causal Identification
+
+### Missing Data
+
+To address missing data:
+
+	*	Baseline Missingness: We used the predictive mean matching algorithm from the mice package in R [@vanbuuren2018] to impute missing baseline data (<2% of covariate values). We performed single imputation, using only baseline data for imputation [@zhang2023shouldMultipleImputation].
+	*	Outcome Missingness: To account for confounding and selection bias from missing responses and panel attrition, we applied censoring weights obtained using nonparametric machine learning ensembles via the lmtp package in R [@williams2021].
+
+
+### Confounding Control
+
+To address confounding, we followed the modified disjunctive cause criterion [@vanderweele2019], which involved:
+
+	1.	Identifying all common causes of both the treatment and outcomes.
+	2.	Excluding instrumental variables that affect the exposure but not the outcome.
+	3.	Including proxies for unmeasured confounders affecting both exposure and outcome.
+	4.	Controlling for baseline exposure and baseline outcome, serving as proxies for unmeasured common causes [@vanderweele2020].
+
+The covariates included for confounding control are detailed in [Appendix B](#appendix-demographics) These methods adhere to the guidelines provided in [@bulbulia2024PRACTICAL] and were pre-specified in our study protocol [https://osf.io/ce4t9/](https://osf.io/ce4t9/). @tbl-02 presents a causal diagramme of our identification strategy.
+
 
 ::: {#tbl-02}
 ```{=latex}
@@ -833,46 +860,30 @@ A total of `r n_participants` individuals met these criteria and were included i
 This table presents three Single World Intervention Graphs (SWIGs), one for each treatment condition we compare, refer to [@richardson2013].
 :::
 
-@tbl-02 presents three Single World Intervention Graphs (SWIGs) that describe our identification strategy. We follow [@richardson2013]'s convention for explicitly representing a conditional treatment intervention using Single World Intervention Graphs (SWIGs) that distinguish between "the natural value of the treatment" and the conditional treatment intervention: $\mathbf{g}{A_1} \equiv A^+_1(\mathbf{g}))$ (refer to [@young2014identification]). For the modified treatment policies we consider here, causal effects for the policy intervention are identified if causal effects would be identified from a fixed intervention. We recommend expressing causal identification using SWIGs because they encompass causal DAGs yet are more precise and more general. Refer to [@richardson2023potential; @richardson2013; @robins2010alternative; @richardson2013swigsprimer; @shpitser2016causal; @richardson2023potential]. On modified treatment policies refer to [@diaz2012population; @richardson2013; @young2014identification; @diaz2021nonparametric].
+@tbl-02 presents three Single World Intervention Graphs (SWIGs) that describe our identification strategy. We follow [@richardson2013]'s convention for explicitly representing a conditional treatment intervention using Single World Intervention Graphs (SWIGs). Refer to [@richardson2023potential; @richardson2013; @robins2010alternative; @richardson2013swigsprimer; @shpitser2016causal; @richardson2023potential]. On modified treatment policies refer to [@diaz2012population; @richardson2013; @young2014identification; @diaz2021nonparametric; @bulbulia2024swigstime].
 
-### Confounding Control
 
-To manage confounding in our analysis, we implement [@vanderweele2019]'s *modified disjunctive cause criterion* by following these steps:
+### Statistical Estimation
 
-1. **Identified all common causes** of both the treatment and outcomes.
-2. **Excluded instrumental variables** that affect the exposure but not the outcome. Instrumental variables do not contribute to controlling confounding and can reduce the efficiency of the estimates.
-3. **Included proxies for unmeasured confounders** affecting both exposure and outcome. According to the principles of d-separation @pearl2009a, using proxies allows us to control for their associated unmeasured confounders indirectly.
-4. **Controlled for baseline exposure** and **baseline outcome**. Both are used as proxies for unmeasured common causes, enhancing the robustness of our causal estimates, refer to @vanderweele2020.
+We used Targeted Minimum Loss-based Estimation (TMLE) to estimate causal effects while providing valid statistical uncertainty measures [@van2014targeted; @van2012targeted]. TMLE is a semi-parametric approach that combines machine learning algorithms with statistical inference to produce robust estimates, even in the presence of high-dimensional data and complex relationships.
 
-[Appendix B](#appendix-demographics) details the covariates we included for confounding control. These methods adhere to the guidelines provided in [@bulbulia2024PRACTICAL] and were pre-specified in our study protocol [https://osf.io/ce4t9/](https://osf.io/ce4t9/).
+In the first step, we modelled the relationships between treatments, covariates, and outcomes using machine learning algorithms, allowing for flexible modelling without restrictive assumptions. In the second step, we refined these initial estimates through an iterative updating process guided by the "efficient influence function," improving the accuracy of the causal effect estimates [@van2014discussion].
 
-### Missing Data
+We used the `lmtp` package in R [@williams2021] for estimation, employing the `SuperLearner` library with predefined algorithms `SL.ranger`, `SL.glmnet`, and `SL.xgboost` [@polley2023; @xgboost2023; @Ranger2017]. Cross-validation was used to prevent overfitting.
 
-To mitigate bias from missing data, we implement the following strategies:
-
-**Baseline missingness**: we employed the `ppm` algorithm from the `mice` package in R [@vanbuuren2018] to impute missing baseline data. This method allowed us to reconstruct incomplete datasets by estimating a plausible value for missing observation. Because we could only pass one data set to the `lmtp`, we employed single imputation. < 2% of covariate values were missing at baseline. Eligibility for the study required fully observed baseline treatment measures as well as treatment wave treatment measures. Again, we only used baseline data to impute baseline missingness (refer to @zhang2023shouldMultipleImputation).
-
-**Outcome missingness**: to address confounding and selection bias arising from missing responses and panel attrition, we applied censoring weights obtained using nonparametric machine learning ensembles afforded by the `lmtp` package (and its dependencies) in R [@williams2021]. 
-### Statistical Estimator
-
-We perform statistical estimation using a semi-parametric Targeted Minimum Loss-based Estimation (TMLE) approach. TMLE is a robust method for estimating causal effects while providing valid statistical uncertainty measures [@van2014targeted; @van2012targeted].
-
-TMLE operates through a two-step process. Initially, TMLE models the relationship between treatments, covariates, and outcomes. In our implementation, we employ machine learning algorithms for this step, allowing us to flexibly model complex, high-dimensional covariate spaces without imposing restrictive model assumptions [@van2014discussion; @vanderlaan2011; @vanderlaan2018]. The outcome of this step is a set of initial estimates for these relationships.
-
-The second step of TMLE involves "targeting" these initial estimates by incorporating information about the observed data distribution to improve the accuracy of the causal effect estimate. This iterative updating process adjusts the initial estimates towards the true causal effect, guided by the efficient influence function. The efficient influence function represents the most sensitive direction for perturbations in the observed data and ensures that the final TMLE estimate is as close as possible, given the measures and data, to the targeted causal effect while remaining robust to model misspecification in either the outcome or the treatment model [@van2014discussion].
-
-A central feature of TMLE is its double-robustness property. If either the treatment model or the outcome model is correctly specified, the TMLE estimator will consistently estimate the causal effect. It is important to note that these algorithms are effective only if our causal assumptions are correct. We used cross-validation to avoid overfitting, following the pre-stated protocols in [@bulbulia2024PRACTICAL]. The integration of TMLE and machine learning in our implementation reduces the dependence on restrictive modelling assumptions and introduces an additional layer of robustness. For further details of the specific targeted learning strategy we favour, see [@hoffman2022; @hoffman2023; @díaz2021].
-
-We perform estimation using the `lmtp` package [@williams2021]. We used the `superlearner` library for semi-parametric estimation with the predefined libraries `SL.ranger`, `SL.glmnet`, and `SL.xgboost` [@polley2023; @xgboost2023; @Ranger2017]. We created graphs, tables, and output reports using the `margot` package [@margot2024].
+We generated graphs, tables, and output reports using the margot package [@margot2024].
 
 
 ### Sensitivity Analysis Using the E-value
 
-To assess the sensitivity of results to unmeasured confounding, we report VanderWeele and Ding's "E-value" in all analyses [@vanderweele2017]. The E-value quantifies the minimum strength of association (on the risk ratio scale) that an unmeasured confounder would need to have with both the exposure and the outcome (after considering the measured covariates) to explain away the observed exposure-outcome association [@vanderweele2020; @linden2020EVALUE]. To evaluate the strength of evidence, we use the bound of the E-value 95% confidence interval closest to 1. This provides a clear metric for understanding the robustness of our findings in the presence of potential unmeasured confounding.
+
+To assess the sensitivity of results to unmeasured confounding, we report VanderWeele and Ding’s “E-value” in all analyses [@vanderweele2017]. The E-value quantifies the minimum strength of association (on the risk ratio scale) that an unmeasured confounder would need to have with both the exposure and the outcome (after considering the measured covariates) to explain away the observed exposure–outcome association [@vanderweele2020; @linden2020EVALUE]. We used the bound of the E-value 95% confidence interval closest to 1 to evaluate the strength of evidence, providing a clear metric for understanding the robustness of our findings in the presence of potential unmeasured confounding.
 
 ### Scope of Interventions
 
-To illustrate the magnitude of the shift interventions we contrast, we provide histograms in @fig-hist, that display the distribution of treatments during the treatment wave. @fig-hist *A*: The intervention for regular religious service, represented in these histograms, affects a larger portion of the sample than the zero religious service intervention. @fig-hist *B*: presents the intervention for zero religious service. It involves shifting a smaller portion of the sample than the regular religious service intervention. Again, the comparative analysis of the 'Regular' versus 'Zero' interventions addresses the scientifically intriguing question: what is the effect difference in a scenario where religious service is universal versus completely absent? The intervention that increases attendance to regular service levels from the status quo allows us to consider the potential costs and benefits of widespread religious practice across society. The intervention that eliminates religious service allows us to consider the potential costs and benefits of the widespread loss of religious practice across society.
+
+To illustrate the magnitude of the interventions, we provide histograms (See @fig-hist) showing the distribution of religious service attendance during the treatment wave. In @fig-hist *A*, the intervention for regular religious service affects a larger portion of the sample than the zero religious service intervention depicted in Figure @fig-hist *B*. The ‘Regular vs. Zero’ comparison addresses the question: what is the difference in effects between a society where religious service is universal versus one where it is completely absent?
+
 
 ```{r}
 #| label: fig-hist
@@ -888,9 +899,9 @@ graph_density_of_exposure_both + theme_classic()
 ```
 {{< pagebreak >}}
 
-### Evidence for Change in the Treatment Variable
+### Changes in Religious Service Attendance
 
-@tbl-transition clarifies the change in the treatment variable from the baseline wave to the baseline + 1 wave across the sample. Assessing change in a variable is essential for evaluating the positivity assumption and recovering evidence for the incident exposure effect of the treatment variable [@vanderweele2020; @danaei2012; @hernan2024WHATIF]. We find that state 4 (weekly attendance) and state 0 present the highest overall. However, movement between these states reveals they are not deterministic. States 1, 2, 3, and 5 exhibit more frequent jumps in and out of these states, suggesting lower stability and/or measurement error.
+Table @tbl-transition shows the transitions in religious service attendance from baseline to the treatment wave. Assessing changes in the treatment variable is essential for evaluating the positivity assumption and understanding the potential effect of changes in exposure [@vanderweele2020; @danaei2012; @hernan2024WHATIF]. We observe that attendance levels at 0 (no attendance) and 4 (weekly attendance) were most common, but transitions between states indicate variation in attendance over time.
 
 ```{r}
 #| label: tbl-transition
